Message UI fix (overflow)

--- a/frontend/src/pages/message/style.scss
+++ b/frontend/src/pages/message/style.scss
@@ -1,7 +1,28 @@
 .msg {
-    &__bg {
-        &--light {
-            background-color: #565759;
-        }
+  &__bg {
+    &--light {
+      background-color: #565759;
     }
+  }
+}
+
+.message--box__body {
+  display: block !important;
+  height: 75%;
+  padding: 1rem;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.message-content-wrapper {
+  display: block;
+  height: 100%;
+  // overflow-y: hidden;
+}
+.message-content {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
 }
